[package]
name = "aws_sso_flow"
version = "0.1.0"
authors = ["Chris Connelly <chris@connec.co.uk>"]
license = "MIT"
edition = "2021"
description = "AWS SSO authentication flow"
repository = "https://github.com/connec/aws_sso_flow"

[features]
default = ["rustls"]
native-tls = ["rusoto_core/native-tls", "rusoto_sso/native-tls", "rusoto_sso_oidc/native-tls"]
rustls = ["rusoto_core/rustls", "rusoto_sso/rustls", "rusoto_sso_oidc/rustls"]

# Include integration with rusoto_credential
rusoto = ["async-trait", "rusoto_credential"]

[dependencies]
chrono = { version = "0.4.22", default-features = false }
const-str = "0.4.3"
dirs-next = "2.0.0"
futures = "0.3.24"
md-5 = "0.10.4"
rusoto_core = { version = "0.48.0", default-features = false }
rusoto_sso = { version = "0.48.0", default-features = false }
rusoto_sso_oidc = { version = "0.48.0", default-features = false }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["fs", "io-util", "sync"] }
url = "2.3.1"

async-trait = { version = "0.1.57", optional = true }
# The version constraint is the lowest with a compatible ProvideAwsCredentials trait. There's no
# upper bound so that the version will adapt to whatever clients are using. There will be breakage
# if the trait changes in future, but that hopefully won't happen as often as new versions are
# released with additional service coverage etc.
rusoto_credential = { version = ">=0.43.0", optional = true }

[dev-dependencies]
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
