[package]
name = "aws_sso_flow"
version = "0.3.0"
authors = ["Chris Connelly <chris@connec.co.uk>"]
license = "MIT"
edition = "2021"
description = "AWS SSO authentication flow"
repository = "https://github.com/connec/aws_sso_flow"

[[example]]
name = "aws_sdk"
required-features = ["aws-sdk"]

[features]
default = ["rustls"]
native-tls = ["aws-config/native-tls", "aws-sdk-sso/native-tls", "aws-sdk-ssooidc/native-tls"]
rustls = ["aws-config/rustls", "aws-sdk-sso/rustls", "aws-sdk-ssooidc/rustls"]

# Include integration with aws-sdk
aws-sdk = ["dep:aws-types-integration"]

# Include integration with rusoto_credential
rusoto = ["async-trait", "rusoto_credential"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
aws-config = { version = "0.49.0", default-features = false, features = ["client-hyper", "rt-tokio"] }
aws-sdk-sso = { version = "0.19.0", default-features = false, features = ["rt-tokio"] }
aws-sdk-ssooidc = { version = "0.19.0", default-features = false, features = ["rt-tokio"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock", "serde"] }
const-str = "0.4.3"
dirs-next = "2.0.0"
futures = "0.3.24"
md-5 = "0.10.4"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["fs", "io-util", "sync"] }
url = "2.3.1"

async-trait = { version = "0.1.57", optional = true }
# The version constraint is the lowest with a compatible ProvideAwsCredentials trait. There's no
# upper bound so that the version can adapt to whatever clients are using. There will be breakage if
# if the trait changes in future, but that hopefully won't happen as often as new versions are
# released with additional service coverage etc.
rusoto_credential = { version = ">=0.43.0", optional = true }

# The version constraint is the lowest with a compatible ProvideCredentials trait. There's no upper
# bound so that the version can adapt to whatever clients are using. There will be breakage if the
# trait changes in future, but that hopefully won't happen as often as new versions are released
# with additional service coverage etc.
aws-types-integration = { package = "aws-types", version = ">=0.31.0", optional = true }

[dev-dependencies]
aws-types-integration = { package = "aws-types", version = "=0.49.0" }
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
